<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.BichosFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageButton
        android:id="@+id/buttonCachorro"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:contentDescription="@string/button_cachorro"
        android:scaleType="centerCrop"
        android:src="@drawable/cachorro"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonGato"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:contentDescription="@string/button_gato"
        android:scaleType="fitCenter"
        android:src="@drawable/gato"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonLeao"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:contentDescription="@string/button_leao"
        android:scaleType="fitCenter"
        android:src="@drawable/leao"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonCachorro" />

    <ImageButton
        android:id="@+id/buttonMacaco"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:contentDescription="@string/button_macaco"
        android:scaleType="fitCenter"
        android:src="@drawable/macaco"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/buttonGato" />

    <ImageButton
        android:id="@+id/buttonOvelha"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/button_ovelha"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/ovelha"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonLeao" />

    <ImageButton
        android:id="@+id/buttonVaca"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/button_vaca"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/vaca"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/buttonMacaco" />
</androidx.constraintlayout.widget.ConstraintLayout>