<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NumerosFragment"
    android:background="@drawable/segundo_fundo">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageButton
        android:id="@+id/buttonUm"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/segundo_fundo"
        android:scaleType="centerCrop"
        android:src="@drawable/um"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_um"/>

    <ImageButton
        android:id="@+id/buttonDois"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/segundo_fundo"
        android:scaleType="centerCrop"
        android:src="@drawable/dois"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_dois"/>

    <ImageButton
        android:id="@+id/buttonTres"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/segundo_fundo"
        android:scaleType="centerCrop"
        android:src="@drawable/tres"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/buttonUm"
        android:contentDescription="@string/button_tres"/>

    <ImageButton
        android:id="@+id/buttonQuatro"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/segundo_fundo"
        android:scaleType="centerCrop"
        android:src="@drawable/quatro"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/buttonDois"
        android:contentDescription="@string/button_quatro"/>

    <ImageButton
        android:id="@+id/buttonCinco"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/segundo_fundo"
        android:scaleType="centerCrop"
        android:src="@drawable/cinco"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/buttonTres"
        android:contentDescription="@string/button_cinco"/>

    <ImageButton
        android:id="@+id/buttonSeis"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/segundo_fundo"
        android:scaleType="centerCrop"
        android:src="@drawable/seis"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/buttonQuatro"
        android:contentDescription="@string/button_seis"/>
</androidx.constraintlayout.widget.ConstraintLayout>